--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-  compileOptions {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-  }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -43,4 +43,6 @@ dependencies {
     //payment library
     implementation 'com.braintreepayments:card-form:3.1.1'
 
+    //animations
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 }
