--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,27 +23,56 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+    }
+  }
+  useLibrary 'android.test.runner'
+
+  useLibrary 'android.test.base'
+  useLibrary 'android.test.mock'
 }
 
+
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.0'
-    implementation 'com.google.firebase:firebase-firestore:21.4.2'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+  implementation 'com.android.support:multidex:1.0.3'
+  implementation 'com.google.android.material:material:1.1.0'
+  implementation 'androidx.navigation:navigation-fragment:2.2.2'
+  implementation 'androidx.navigation:navigation-ui:2.2.2'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'com.google.firebase:firebase-auth:19.3.0'
+  implementation 'com.google.firebase:firebase-firestore:21.4.2'
+  implementation 'com.google.android.gms:play-services-maps:17.0.0'
+  testImplementation 'junit:junit:4.13'
+  testImplementation "org.robolectric:robolectric:4.3.1"
+  androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+  //payment library
+  implementation 'com.braintreepayments:card-form:3.1.1'
+
+  //animations
+  implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
+
+
+
+  // The following Espresso dependency can be either "implementation"
+  // or "androidTestImplementation", depending on whether you want the
+  // dependency to appear on your APK's compile classpath or the test APK
+  // classpath.
+  androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
 
     //payment library
     implementation 'com.braintreepayments:card-form:3.1.1'
 
     //animations
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
+
 }
